<resources>
    <string name="app_name">Password_Manager</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="signupNow">New here? Signup now!</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_registered_log_in">Already registered? Log in!</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_new_password">Add new password</string>
    <string name="add">Add</string>
    <string name="generate_password">Generate Password</string>
    <string name="add_password">Add Password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="colon">:</string>
    <string name="passwords_saved">Passwords Saved: </string>
    <string name="name_col">Name:</string>
    <string name="nuull">Null</string>
    <string name="test">Test</string>
    <string name="set_text">Set text</string>
    <string name="update">Update</string>
    <string name="hash_tester">Hash Tester</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_forgot_pass">forgotPass</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="forgot_pass">Forgot Password</string>
</resources>