<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/dpurp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTV"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="241dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:text="@string/passwords_saved"
                android:textSize="20sp" />

            <TextView
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:text="0"
                android:textSize="20sp" />


        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Name"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/dpurp"
            app:boxStrokeColor="@color/coolYellow"
            app:boxStrokeErrorColor="@color/dopeRed"
            app:hintTextColor="@color/dpurp"
            app:layout_constraintTop_toBottomOf="@+id/cv1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:enabled="false"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/dpurp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/dpurp"
            app:boxStrokeColor="@color/coolYellow"
            app:boxStrokeErrorColor="@color/dopeRed"
            app:hintTextColor="@color/dpurp"
            app:layout_constraintTop_toBottomOf="@+id/Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:enabled="false"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/dpurp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Username"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:textColorHint="@color/dpurp"
            app:boxStrokeColor="@color/coolYellow"
            app:boxStrokeErrorColor="@color/dopeRed"
            app:hintTextColor="@color/dpurp"
            app:layout_constraintTop_toBottomOf="@+id/Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_user_2"
                android:drawablePadding="10dp"
                android:enabled="false"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/dpurp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textColorHint="@color/dpurp"
            app:boxStrokeColor="@color/coolYellow"
            app:boxStrokeErrorColor="@color/dopeRed"
            app:hintTextColor="@color/dpurp"
            app:layout_constraintTop_toBottomOf="@+id/Username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="10dp"
                android:enabled="false"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/dpurp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/setText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>

